# acaiteria-crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  INIT_GIT.sh  LICENSE  NEXT_STEPS.md  Procfile  QUICKSTART.md  README.md  README_CLOUD.md  RUN.md  SUMMARY.md  docker-compose.yml  export_json.py  load_test_data.py  pyproject.toml  render.yaml  requirements.txt  run.py  startup.sh
.github/workflows/: ci.yml
backend/: __init__.py  app.py  models.py
backend/blueprints/: MIGRATION_PLAN.md  __init__.py
database/: schema.sql
docs/: API.md  LGPD.md  MER.md
frontend/: 404.html  500.html  cadastro_cliente.html  cliente_cadastro.html  cliente_extrato.html  cliente_login.html  cliente_painel.html  clientes.html  compras.html  fechamento.html  financeiro.html  historico.html  index.html  login.html  offline.html  politica_privacidade.html  produtos.html  relatorios.html  sobre.html  suporte.html  totem_cliente.html  usuarios.html  venda.html  vendas_lista.html  vitrine.html
frontend/static/: estilos.css  manifest.json  script.js  script_venda.js  sw.js
migrations/: SETUP.md
tests/: conftest.py  test_clientes.py  test_compras_fornecedores.py  test_e2e.py  test_features_v2.py  test_financeiro_extra.py  test_health_relatorios.py  test_ia_ml.py  test_kaizen.py  test_new_features.py  test_portal_cliente.py  test_produtos.py  test_security.py  test_sprint_v4.py  test_sprint_v6.py  test_sprint_v7.py  test_suporte.py  test_vendas.py
